--- a/application.properties
+++ b/application.properties
@@ -7,6 +7,8 @@
 #spring.datasource.password=
 #spring.datasource.driver-class-name=
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
 spring.datasource.url=jdbc:h2:file:~/h2/testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.platform=h2
 spring.datasource.username=sa
